# isomophic-trees-lab

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
CATS_package/: package.xml  solution.cpp
CATS_package/tests/: 2.in  3.in  4.in  5.in  6.in  7.in  8.in
algorytm/: generator.cpp  generator.h  isomorphic.cpp  isomorphic.h  tests.cpp  tree_node.cpp  tree_node.h
cats-package/: solution.cpp  tests.cpp
docs/: document.tex  isomorphic.pptx
speed_test/: CMakeLists.txt  speed_test.cpp  speed_test.h
src/: CMakeLists.txt  isomorphic.cpp  isomorphic.h
test/: CMakeLists.txt  manual.cpp  manual.h
